[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/kangaroo.gd" type="Script" id=2]
[ext_resource path="res://img/kangaroo.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 47, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 47, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 47, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 18.0484

[node name="Kangaroo" groups=[
"persist",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
hp = 2
damage = 3
speed = 100.0

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 4 )
animation = "Walk"
frame = 2
playing = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -5.88628, 0.8409 )
shape = SubResource( 5 )

[node name="BottleTimer" type="Timer" parent="." index="4"]

[node name="DespawnTimer" type="Timer" parent="." index="5"]
wait_time = 2.0
[connection signal="timeout" from="BottleTimer" to="." method="_on_BottleTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
